src/components/Pill/Pill.scss
/*
 * Copyright (c) 2016-present, Parse, LLC
 * All rights reserved.
 *
 * This source code is licensed under the license found in the LICENSE file in
 * the root directory of this source tree.
 */
@import 'stylesheets/globals.scss';

.pill {
  @include MonospaceFont;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #0E69A1;
  height: 20px;
  line-height: 20px;
  border-radius: 10px;
  font-size: 11px;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  & a {
    height: 20px;
    width: 20px;
    background: #d6e5f2;
    border-radius: 50%;
    margin-left: 5px;
    & svg  {
      transform: rotate(316deg);
    }
  }
}

.content {
  width: 80%;
  text-overflow: ellipsis;
  overflow: hidden;
  text-align: left;
  height: 100%;
  white-space: nowrap;
}

.iconAction {
  cursor: pointer;
}

.disableIconAction {
  cursor: initial;
}

